Layout bug fixed

--- a/Portfolio-page/src/app/components/Webdev-projects/spend-monitor/spend-monitor.component.scss
+++ b/Portfolio-page/src/app/components/Webdev-projects/spend-monitor/spend-monitor.component.scss
@@ -48,6 +48,9 @@
    text-align: justify; 
    font-size: 1.8rem;
    margin: .8rem 0;
+   @media only screen and (max-width:50em) {
+     font-size: 2.3rem;
+   }
   }
 
   a{
