--- a/Portfolio-page/src/app/components/Webdev-projects/web-dev-hero-section/web-dev-hero-section.component.scss
+++ b/Portfolio-page/src/app/components/Webdev-projects/web-dev-hero-section/web-dev-hero-section.component.scss
@@ -4,14 +4,19 @@
 @import '~sass/animations';
 @import '~sass/mixins';
 
+.container{
+  width: 90%;
+  margin: 0 auto;
+}
 
 
 
 .hero{
 
  display: flex;
- height: 90vh;
+
  align-items: center;
+ 
 
  @media only screen and (max-width: 50em) {
    flex-direction: column;
@@ -23,9 +28,9 @@
    flex-direction: column;
    justify-content: center;
    text-align: center;
-   width: 100%;
-   height: 55%;
    background-color: black;
+  //  margin: 0 3rem;
+   padding: 10rem 0rem;
    
    h5{
      color: white;
@@ -56,13 +61,12 @@
     @media only screen and (max-width:50em) {
       font-size: 2.3rem;
     }
-   }
+   }  
    @media only screen and (max-width: 50em) {
     order: 1;
     height: 100%;
     padding: 1rem 1rem;
     margin: 3rem 0;
-   //  background-color: red;
  
    }
   }
@@ -70,3 +74,38 @@
 
 
 }
+
+// .container{
+//   width: 90%;
+//   margin: 4rem auto;
+//   // background-color: red;
+  
+// }
+
+// .hero{
+//   display: flex;
+  
+//   &__text{
+//     flex: 0 0 50%;
+//   }
+
+  
+//   &__image{
+//     flex: 1;
+//     display: flex;
+
+    
+    
+//     &__how-i-learned{
+      
+//       background-color: black;
+//       flex: 1;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       color: white;
+
+//       font-size: 4rem;
+//     }
+//   }
+// }
